--- a/index.html
+++ b/index.html
@@ -86,7 +86,36 @@
 
       <div class="direct-msg col-md-6">
 
+        <div class="avatar-contact-info row">
+          <div class="col-md-6">
+            <img class="direct-msg-avatar" src="./images/avatar1.jpg" alt="avatar-img">
+          </div>
+
+          <div class="col-md-6 direct-msg-details">
+            <div class="msg-name">Riley Nelson</div>
+            <div class="msg-status"><span class="msg-dot-on">•</span> Online</div>
+          </div>
+        </div>
+
+        <div class="hz"></div>
+
+
+        <div class="messages">
+
+
+
+
+
+          <form action="chatbar" class="chatbar">
+            <span class="chat-btn"><i class="fa-solid fa-paper-plane"></i></span>
+            <input class="chat-bar" type="search" placeholder="Enter text here...">
+          </form>
+
+        </div>
+
+
       </div>
+
 
     </div>
 
