--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
           <div class="col-md-6 direct-msg-details">
             <div class="msg-name">Riley Nelson</div>
             <div class="msg-status"><span class="msg-dot-on">•</span> Online</div>
+            <div class="msg-about">✈️🧘🏽‍♀️📚</div>
           </div>
         </div>
 
@@ -102,13 +103,35 @@
 
         <div class="messages">
 
+          <div class="my-message-wrapper">
+            <div class="my-message">
+              <div class="my-avatar-date">
+                <p>Today, 21:22</p>
+                <img class="my-avatar-img" src="./images/my-avatar.jpg" alt="avatar-img">
+              </div>
+              <!-- speech bubble -->
+            </div>
+            <p class="my-speech-bubble">Hey, Riley! How have you been? I heard from a few people that you're back in town??</p>
+          </div>
 
 
+          <div class="their-message-wrapper">
+            <div class="their-message">
+              <div class="their-avatar-date">
+                <p>Today, 21:47</p>
+                <img class="their-avatar-img" src="./images/avatar1.jpg" alt="avatar-img">
+              </div>
+              <!-- speech bubble -->
+            </div>
+            <p class="their-speech-bubble">What a coincidence! I was just thinking about messaging you 😆</p>
+            <p class="their-speech-bubble bubble-two">I'm only back till next Tuesday, but it would be great if we could catch up?</p>
+          </div>
 
 
           <form action="chatbar" class="chatbar">
             <span class="chat-btn"><i class="fa-solid fa-paper-plane"></i></span>
             <input class="chat-bar" type="search" placeholder="Enter text here...">
+            <i class="fa-solid fa-camera"></i>
           </form>
 
         </div>
