--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
           <div class="my-message-wrapper">
             <div class="my-message">
               <div class="my-avatar-date">
-                <p>Today, 21:22</p>
+                <p class="day-time">Today, 21:22</p>
                 <img class="my-avatar-img" src="./images/my-avatar.jpg" alt="avatar-img">
               </div>
               <!-- speech bubble -->
@@ -118,13 +118,13 @@
           <div class="their-message-wrapper">
             <div class="their-message">
               <div class="their-avatar-date">
-                <p>Today, 21:47</p>
+                <p class="day-time">Today, 21:47</p>
                 <img class="their-avatar-img" src="./images/avatar1.jpg" alt="avatar-img">
               </div>
               <!-- speech bubble -->
             </div>
             <p class="their-speech-bubble">What a coincidence! I was just thinking about messaging you 😆</p>
-            <p class="their-speech-bubble bubble-two">I'm only back till next Tuesday, but it would be great if we could catch up?</p>
+            <p class="their-speech-bubble bubble-two">Are you free tomorrow? It would be great if we could catch up!</p>
           </div>
 
 
